--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -35,22 +35,22 @@ a {
   color: #baaeff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .navbar {
     padding: 1rem;
   }
 
   .navbar-brand {
-    font-size: 0.6rem;
-    padding: 1rem 1.2rem;
+    font-size: 1rem;
+    padding: 1rem 1.25rem;
   }
 
   .navbar-links {
-    gap: 0.3rem;
+    gap: 0.2rem;
   }
 
   .nav-link {
-    font-size: 0.65rem;
-    padding: 0.4rem;
+    font-size: 0.9rem;
+    padding: 0.5rem;
   }
 }
